[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "blofin"
dynamic = ["version"]
description = "BloFin API SDK"
readme = "README.md"
authors = [{name = "Nomeida", email = "nomeida@proton.me"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/nomeida/blofin-python"
"Bug Tracker" = "https://github.com/nomeida/blofin-python/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["blofin"]

[tool.setuptools_scm]
write_to = "src/blofin/_version.py"

# Add any dependencies your package has
[project.dependencies]
# For example:
# requests = ">=2.25.1"

# Add any optional dependencies
[project.optional-dependencies]
